<resources>
    <string name="app_name">Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_spotify">Spotify Streamer</string>
    <string name="text_title">My Nanodegree Apps</string>
    <string name="button_my_app">capstone: my own app</string>
    <string name="button_xyz">xyz reader</string>
    <string name="button_bigger">Build it bigger</string>
    <string name="button_library">Library App</string>
    <string name="button_scores">Scores App</string>
</resources>
