<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_spotify"
        android:id="@+id/button_spotify"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_scores"
        android:id="@+id/button_score"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_library"
        android:id="@+id/button_library"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_bigger"
        android:id="@+id/button_bigger"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_xyz"
        android:id="@+id/button_xys"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/button_my_app"
        android:id="@+id/button_my_app"
        android:layout_marginBottom="16dp"
        style="@style/ButtonStyleSpecial"
        />

</LinearLayout>